# CS372Lab.Spinks

./: .gitignore  receieptbag.cpp
apps/Playing with Queues/: JosephusProblem.cpp
apps/assignment05 works/: prune.cpp  treetest1.cpp
apps/assignment07/: Tree.hpp  treeref.cpp  treetimings.cpp  treetoavl.cpp
apps/assignment08/: cycle_tests.cpp  kevin_bacon_test.cpp
apps/clisttest/: CMakeLists.txt  circularlist.hpp  clisttest.cpp
apps/hanoi/: hanoi.cpp  hanoiit.cpp
apps/isaacLibrary/: arrayclass.cpp  bag.h
apps/samples/: CMakeLists.txt  fib.cpp  fibtime.cpp
apps/sortertest/: sort.cpp  sorter.hpp
docs/: README.md  strenghts,weaknesses,problems_treeclass
include/: ALWGraph.hpp  AMWGraph.hpp  AdjListGraph.hpp  AdjMatrixGraph.hpp  CycleDetection.hpp  Graph.hpp  README.md  SocialGraph.hpp  arrayclass.hpp  avltree.hpp  bag.hpp  dictionary.hpp  listclass.hpp  pair.hpp  queue.hpp  stack.hpp  two_three_tree.hpp  vectorclass.hpp
isaacLibrary/: vectorclass.cpp
